# AlgoritmosGraficos

./: CMakeLists.txt  genera_escena_casa.c  genera_escena_casa.h  main.c
